--- a/cinnaroll.html
+++ b/cinnaroll.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Honey Chicken</title>
+    <title>Cinnamon Rolls</title>
 </head>
 <body>
-    <h1>Honey Chicken</h1>
+    <h1>Frozen Bread Dough Cinnamon Rolls</h1>
+    <img src="images/cinnarolls.jpg" alt="">
 </body>
 </html>
