--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1> Buncha Recipes! </h1>
-    <img src="" alt="">
+    <img src="images/goku-eat.gif" alt="goku eating">
         <ul>
-            <li> <a href="recipes/chickenparm.html"> Chicken Parm!</a> </li>
-            <li>  </li>
+            <li><a href="chickenparm.html"> Chicken Parm!</a></li>
+            <li><a href="honeychicken.html"> Honey Chicken!</a></li>
+            <li><a href="chicken65.html"> Chicken 65!</a></li>
+            <li><a href="cinnaroll.html"> Cinnamon Rolls!</a></li>
         </ul>
 </body>
 </html>
