first bit of css styling

--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Recipe Project</title>
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
-    <h1> Buncha Recipes! </h1>
-    <img src="images/goku-eat.gif" alt="goku eating">
-        <ul>
-            <li><a href="chickenparm.html"> Chicken Parm!</a></li>
-            <li><a href="honeychicken.html"> Honey Chicken!</a></li>
-            <li><a href="chicken65.html"> Chicken 65!</a></li>
-            <li><a href="cinnaroll.html"> Cinnamon Rolls!</a></li>
-        </ul>
-</body>
+    <div class="center">
+    <h1> Buncha Recipes </h1>
+        <img src="images/goku-eat.gif" alt="goku eating">
+    </div>
+    <div class="container">
+        <div class="top-left">
+            <a href="chickenparm.html"> Chicken Parm</a>
+        </div>
+        <div class="top-right">
+            <a href="honeychicken.html"> Honey Chicken</a> 
+        </div>
+        <div class="bottom-left">
+            <a href="chicken65.html"> Chicken 65</a>
+        </div>
+        <div class="bottom-right">
+            <a href="cinnaroll.html"> Cinnamon Rolls</a>
+        </div>
+    </div>
+    </body>
 </html>
