changed bg color, css in confusing tf out of me rn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Recipe Project</title>
     <link href="css/index.css" rel="stylesheet">
@@ -13,16 +12,16 @@
         <img src="images/goku-eat.gif" alt="goku eating">
     </div>
     <div class="container">
-        <div class="top-left">
+        <div id="top-left">
             <a href="chickenparm.html"> Chicken Parm</a>
         </div>
-        <div class="top-right">
+        <div id="top-right">
             <a href="honeychicken.html"> Honey Chicken</a> 
         </div>
-        <div class="bottom-left">
+        <div id="bottom-left">
             <a href="chicken65.html"> Chicken 65</a>
         </div>
-        <div class="bottom-right">
+        <div id="bottom-right">
             <a href="cinnaroll.html"> Cinnamon Rolls</a>
         </div>
     </div>
