kinda fixed positiong a little bit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Recipe Project</title>
+    <title> Recipe Project!!</title>
     <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
@@ -14,15 +14,19 @@
     <div class="container">
         <div id="top-left">
             <a href="chickenparm.html"> Chicken Parm</a>
+            <img src="images/chickenparm.jpg" style="width:220px;height:220px;">
         </div>
         <div id="top-right">
             <a href="honeychicken.html"> Honey Chicken</a> 
+            <img src="images/honeyglazechick.jpg" style="width:220px;height:220px;">
         </div>
         <div id="bottom-left">
             <a href="chicken65.html"> Chicken 65</a>
+            <img src="images/chicken65.jpg" style="width:220px;height:220px;">
         </div>
         <div id="bottom-right">
             <a href="cinnaroll.html"> Cinnamon Rolls</a>
+                <img src="images/cinnarolls.jpg" style="width:220px;height:220px;">
         </div>
     </div>
     </body>
