--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="center">
-    <h1> Buncha Recipes </h1>
+    <h1> Recipes </h1>
         <img src="images/goku-eat.gif" alt="goku eating">
     </div>
     <div class="container">
