--- a/chickenparm.html
+++ b/chickenparm.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Parm</title>
+    <link href="css/chickenparm.css" rel="stylesheet">
 </head>
 <body>
+    <div class="center">
     <h1> Chicken Parm</h1>
-    <img src="images/chickenparm.jpg" alt="">
+    <img src="images/chickenparm.jpg" alt="Chicken Parmesean"style="width:500px;height:500px" >
+        </div>
 </body>
 </html>
