--- a/chickenparm.html
+++ b/chickenparm.html
@@ -9,7 +9,31 @@
 <body>
     <div class="center">
     <h1> Chicken Parm</h1>
-    <img src="images/chickenparm.jpg" alt="Chicken Parmesean"style="width:500px;height:500px" >
+    <img src="images/chickenparm.jpg" alt="Chicken Parmesean"style="width:500px;height:400px" >
         </div>
+
+    <div class="container">
+        <div class="description">
+            <h2> Description</h2>
+            <p> This is an easy Chicken Parm recipe that's delicious. You can do this in an oven, toaster oven, or air fryer.</p>
+        </div>
+        <div class="Ingredients">
+            <h2> Ingredients</h2>
+            <ul>
+                <li> cooking spray</li>
+                <li> 1 (16 ounce) package skinless, boneless chicken breasts</li>
+                <li> 4 slices mozzarella cheese</li>
+                <li> 2 cups tomato sauce, or to taste</li>
+            </ul>
+        </div>
+        <div class="Steps">
+            <h2> Steps</h2>
+            <ol>
+                <li> Preheat the oven to 375 degrees F (190 degrees C). Spray a baking pan with cooking spray. Place chicken on the prepared pan.</li>
+                <li> Bake in the preheated oven for 20 minutes, flipping chicken after 12 minutes. Remove from the oven, add desired amount of sauce, and top each breast with mozzarella cheese.</li>
+                <li> Bake until cheese is melted and chicken is no longer pink in the center and the juices run clear, about 12 more minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
