--- a/chickenparm.html
+++ b/chickenparm.html
@@ -17,7 +17,7 @@
             <h2> Description</h2>
             <p> This is an easy Chicken Parm recipe that's delicious. You can do this in an oven, toaster oven, or air fryer.</p>
         </div>
-        <div class="Ingredients">
+        <div class="ingredients">
             <h2> Ingredients</h2>
             <ul>
                 <li> cooking spray</li>
@@ -26,7 +26,7 @@
                 <li> 2 cups tomato sauce, or to taste</li>
             </ul>
         </div>
-        <div class="Steps">
+        <div class="steps">
             <h2> Steps</h2>
             <ol>
                 <li> Preheat the oven to 375 degrees F (190 degrees C). Spray a baking pan with cooking spray. Place chicken on the prepared pan.</li>
